Committing the changes